[package]
name = "edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.11"
libc = "0.2.142"
nix = "0.26.2"
terminal_size = "0.2.5"
textwrap = "0.16.0"
unic-segment = "0.9.0"
unicode-truncate = "0.2.0"
unicode-width = "0.1.10"
